# yral-ml-feed-server

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  entrypoint.sh  fly-prod.toml  fly-staging.toml  fly.toml  post-initialization.sh  stress_test_recommendation.py
.github/workflows/: build-check-staging.yml  build-check.yml  deploy-on-merge-to-main.yml  deploy-preview.yml  deploy-staging.yml
did/: canister_ids.json
python_src/: README.md  bigquery_schema.txt  check_version.sh  pyproject.toml  requirements.txt  setup.sh
python_src/recommendation_service/: clean_recommendation_report_filtered_v0.py  clean_recommendation_v0.py  clean_recommendation_v2.py  clean_recommendation_v2_deduped.py  clean_recommendation_v3.py  combined_recommendation_v2.py  combined_recommendation_v2_deduped.py  combined_recommendation_v3.py  consts.py  feed_rec_server.py  ml_feed_reports.proto  ml_feed_reports_pb2.py  ml_feed_reports_pb2_grpc.py  nsfw_feed_recommendation_report_filtered_v0.py  nsfw_feed_recommendation_v0.py  nsfw_recommendation_v2.py  nsfw_recommendation_v2_deduped.py  nsfw_recommendation_v3.py  ping_local.py  ping_local_report.py  ping_local_report_filtered.py  ping_local_v3.py  ping_server.py  ping_server_report_endpoint.py  report_video_v0.py  report_video_v3.py  simple_recommendation_v0.py  storage_api_writer.py  video_recommendation.proto  video_recommendation_pb2.py  video_recommendation_pb2_grpc.py
python_src/utils/: bigquery_utils.py  config.py  upstash_utils.py
rust_src/: app_state.rs  consts.rs  error.rs  grpc_services.rs  main.rs  ml_feed_impl.rs  utils.rs
rust_src/canister/: mod.rs
rust_src/feed/: mod.rs
rust_src/feed/utils/: coldstart_clean_cache.rs  coldstart_mixed_cache.rs  coldstart_nsfw_cache.rs  global_cache.rs  ml_feed.rs  mod.rs
