[package]
name = "ml_feed_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.0"
anyhow = "1.0.86"
http = "0.2.11"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.0", features = ["tls", "tls-webpki-roots"] }
tonic-web = "0.12.0"
tower-http = { version = "0.4.4", default-features = false, features = [
    "cors",
] }
candid = "0.10.6"
serde_bytes = "0.11.14"
ic-agent = "0.33.0"
serde = "1.0.197"
serde_json = "1.0.114"
chrono = "0.4.38"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
tonic-build = "0.12.0"
candid_parser = "0.1.1"
serde_json = "1.0.110"
convert_case = "0.6.0"


[[bin]]
name = "ml-feed-rust"
path = "rust_src/main.rs"
