[package]
name = "ml_feed_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.0"
anyhow = "1.0.86"
http = "1.0.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.0", features = ["tls-webpki-roots"] }
tonic-web = "0.13.0"
tower-http = { version = "0.6.2", default-features = false, features = [
    "cors",
] }
tower = { version = "0.5.1", features = ["full"] }
candid = "0.10.6"
serde_bytes = "0.11.14"
ic-agent = "0.33.0"
serde = "1.0.197"
serde_json = "1.0.114"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
], default-features = false }
axum = { version = "0.8.0", features = ["macros", "json"] }
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
log = "0.4.21"
env_logger = "0.11.3"
yral-ml-feed-cache = { git = "https://github.com/yral-dapp/yral-common", rev = "088a871f986236bab45ff89e68886f4c8d802449", package = "ml-feed-cache" } # yral-ml-feed-cache = { path = "../yral-common/ml-feed-cache", package = "ml-feed-cache" }
rand = "0.9.0"
sentry = { version = "0.37.0", default-features = false, features = [
    "rustls",
    "sentry-anyhow",
    "serde_json",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "release-health",
    "reqwest",
] }
sentry-tower = { version = "0.37.0", features = ["axum", "axum-matched-path"] }
tracing = "0.1.41"
sentry-tracing = "0.37.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-futures = "0.2.5"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
tonic-build = "0.13.0"
candid_parser = "0.1.1"
serde_json = "1.0.110"
convert_case = "0.6.0"


[[bin]]
name = "ml-feed-rust"
path = "rust_src/main.rs"

[features]
local-bin = []
staging = []
